# teeth

./: CMakeLists.txt  LICENSE  README.md
inc/: teeth.h
rest/: requirements.txt  teeth.py
src/: lib.c  lib.h  teeth-dump.c  teeth-gen.c  teethd.c
